Fixed modal border radius on mobile

--- a/css/components.css
+++ b/css/components.css
@@ -137,6 +137,9 @@
     padding-top: 28px;
     background-color: rgba(var(--background-color), 0.9);
     backdrop-filter: blur(8px);
+    
+    border-top-left-radius: var(--radius);
+    border-top-right-radius: var(--radius);
 }
 
 .modal > .modal-content .sticky {
